# vw_explorer

./: .gitignore  LICENSE  MANIFEST.in  README.md  example_usage.ipynb  pyproject.toml  setup.py  vw_quicklook_2.py
assets/: IFUcen.txt
example_data/: README.md  log.txt
example_data/guider_frames/20251115/: 061431.fits  061506.fits  061730.fits  061815.fits  061900.fits  062115.fits  062200.fits
vw_explorer/: __init__.py  __main__.py  constants.py  logger.py  util.py
vw_explorer/assets/: default_config.yml  example_log.txt  inward_ticks.mplstyle
vw_explorer/calculations/: __init__.py  clipping.py  guidestar_fitting.py  image_stacking.py  other.py
vw_explorer/classes/: __init__.py  dither_chunk.py  guider_frame.py  guider_sequence.py  obs_timeslot.py  observation.py  observation_sequence.py  star_model_fit.py
vw_explorer/display/: multi_file_plot.py
vw_explorer/io/: __init__.py  dither_chunk_loading.py  guider_indexing.py  ifu_data_loading.py  log_parsing.py  log_sanitization.py  observation_loading.py  observation_processing.py  util.py
vw_explorer/io/processing/: __init__.py  data_combination.py  data_processing.py  guider_sequence_loading.py  plot_creation.py  summary_plots.py
vw_explorer/plotting/: __init__.py  airmass_plotting.py  amplitude_plotting.py  centroid_plotting.py  flux_rate_plotting.py  fwhm_plotting.py  guide_frame_num_plotting.py  guider_frame_plots.py  guider_image_plotting.py  guider_sequence_plots.py  ifu_data_plots.py  observation_sequence_plots.py  util.py
vw_explorer/scripts/: observation_processing.py  vw_guider_look.py  vw_process_guideframes.py  vw_quicklook.py  vw_vizualize_chunk.py
vw_explorer/setup/: __init__.py  config_io.py  constants.py  vwe_config.py
vw_guider_analysis/: __init__.py  __main__.py  constants.py  logger.py
vw_guider_analysis/calculations/: __init__.py  clipping.py  guidestar_fitting.py  other.py
vw_guider_analysis/classes/: __init__.py  guider_frame.py  guider_sequence.py  obs_timeslot.py  observation.py  observation_sequence.py
vw_guider_analysis/io/: __init__.py  guider_indexing.py  ifu_data_loading.py  observation_loading.py  observation_processing.py  util.py
vw_guider_analysis/plotting/: __init__.py  guider_frame_plots.py  guider_sequence_plots.py  ifu_data_plots.py  observation_sequence_plots.py
vw_guider_analysis/scripts/: vw_quicklook.py
