[build-system]
requires = ["setuptools>=42", "wheel", "toml", "dataclasses", "typing-extensions"]
build-backend = "setuptools.build_meta"

[project]
name = "vw_explorer"
version = "0.1.2"
authors = [
    { name = "Fabian Balzer", email = "fbalzer@mpe.mpg.de" }
]
license-files = ["LICENSE"]
description = "A tool for exploring and analyzing VW guider data."
readme = "README.md"
keywords = ["astronomy", "data analysis", "guider"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.19",
    "matplotlib>=3.3",
    "astropy>=4.0",
    "pandas>=1.1",
    "scipy>=1.5",
    "pyyaml"
]
requires-python = ">=3.6"

[project.scripts]
vw_quicklook = "vw_explorer.scripts.vw_quicklook:main"
vw_guider_look = "vw_explorer.scripts.vw_guider_look:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["vw_explorer"]
